--- a/index.html
+++ b/index.html
@@ -201,86 +201,92 @@
                             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
                         </div>
                         <div class="carousel-inner">
-                            <div class="carousel-item card mb-3 active " data-bs-interval="10000">
-                                <div class="row g-0">
-                                    <div class="col-md-12 col-lg-4">
-                                        <img src="./imgs/event3.jpg" class="img-fluid rounded" alt="...">
-                                    </div>
-                                    <div class="col-md-12 col-lg-8">
-                                        <div class="card-body">
-                                            <h4 class="card-title">Tech Tips
-                                            </h4>
-                                            <h5 class="card-title">CAT Reloaded Tech Tips
-                                            </h5>
-                                            <ul class="row list-unstyled detail">
-                                                <li class="col-5 col-sm-5 col-md-6 col-lg-4 col-xl-3"> <i class="fas fa-calendar-alt"></i> 21 - 28 April</li>
-                                                <li class="col-7 col-sm-7 col-md-6 col-lg-6"> <i class="fas fa-map-marker-alt"></i> ITI - Mansoura University</li>
+                            <div class="carousel-item active " data-bs-interval="10000">
+                                <div class="card">
+                                    <div class="row g-0">
+                                        <div class="col-md-12 col-lg-4">
+                                            <img src="./imgs/event3.jpg" class="img-fluid rounded" alt="...">
+                                        </div>
+                                        <div class="col-md-12 col-lg-8">
+                                            <div class="card-body">
+                                                <h4 class="card-title">Tech Tips
+                                                </h4>
+                                                <h5 class="card-title">CAT Reloaded Tech Tips
+                                                </h5>
+                                                <ul class="row list-unstyled detail">
+                                                    <li class="col-5 col-sm-5 col-md-6 col-lg-4 col-xl-3"> <i class="fas fa-calendar-alt"></i> 21 - 28 April</li>
+                                                    <li class="col-7 col-sm-7 col-md-6 col-lg-6"> <i class="fas fa-map-marker-alt"></i> ITI - Mansoura University</li>
 
-                                            </ul>
-                                            <p class="card-text lead">Lorem Ipsum is simply dummy dolor unknown printer text of the printing and typesetting dolor industry. Lorem Ipsum has been the industry's standard dummy when an unknown printer. dolo Contrary to popular belief,
-                                                Lorem
+                                                </ul>
+                                                <p class="card-text lead">Lorem Ipsum is simply dummy dolor unknown printer text of the printing and typesetting dolor industry. Lorem Ipsum has been the industry's standard dummy when an unknown printer. dolo Contrary to popular
+                                                    belief, Lorem
 
-                                            </p>
-                                            <a class="btn outline-cat-button ">
+                                                </p>
+                                                <a class="btn outline-cat-button ">
                                         Read More 
                                      </a> </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="carousel-item card mb-3 " data-bs-interval="2000">
-                                <div class="row g-0">
-                                    <div class="col-md-12 col-lg-4">
-                                        <img src="./imgs/Up Event cover.png" class="img-fluid rounded" alt="event1">
-                                    </div>
-                                    <div class="col-md-12 col-lg-8">
-                                        <div class="card-body">
-                                            <h4 class="card-title">Scope 21
-                                            </h4>
-                                            <h5 class="card-title">Bootcamp & Mini-Hackathon
-                                            </h5>
-                                            <ul class="row list-unstyled detail">
-                                                <li class="col-5 col-sm-5 col-md-6 col-lg-4 col-xl-3"> <i class="fas fa-calendar-alt"></i> 21 - 28 April</li>
-                                                <li class=" col-7 col-sm-7 col-md-6 col-lg-6"> <i class="fas fa-map-marker-alt"></i> ITI - Mansoura University</li>
+                            <div class="carousel-item " data-bs-interval="2000">
+                                <div class="card">
+                                    <div class="row g-0">
+                                        <div class="col-md-12 col-lg-4">
+                                            <img src="./imgs/Up Event cover.png" class="img-fluid rounded" alt="event1">
+                                        </div>
+                                        <div class="col-md-12 col-lg-8">
+                                            <div class="card-body">
+                                                <h4 class="card-title">Scope 21
+                                                </h4>
+                                                <h5 class="card-title">Bootcamp & Mini-Hackathon
+                                                </h5>
+                                                <ul class="row list-unstyled detail">
+                                                    <li class="col-5 col-sm-5 col-md-6 col-lg-4 col-xl-3"> <i class="fas fa-calendar-alt"></i> 21 - 28 April</li>
+                                                    <li class=" col-7 col-sm-7 col-md-6 col-lg-6"> <i class="fas fa-map-marker-alt"></i> ITI - Mansoura University</li>
 
-                                            </ul>
-                                            <p class="card-text lead">Lorem Ipsum is simply dummy dolor unknown printer text of the printing and typesetting dolor industry. Lorem Ipsum has been the industry's standard dummy when an unknown printer. dolo Contrary to popular belief,
-                                                Lorem
+                                                </ul>
+                                                <p class="card-text lead">Lorem Ipsum is simply dummy dolor unknown printer text of the printing and typesetting dolor industry. Lorem Ipsum has been the industry's standard dummy when an unknown printer. dolo Contrary to popular
+                                                    belief, Lorem
 
-                                            </p>
-                                            <a class="btn outline-cat-button ">
+                                                </p>
+                                                <a class="btn outline-cat-button ">
                                         Read More 
                                      </a> </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="carousel-item card mb-3 ">
-                                <div class="row g-0">
-                                    <div class="col-md-12 col-lg-4">
-                                        <img src="./imgs/event1.png" class="img-fluid rounded" alt="event1">
-                                    </div>
-                                    <div class="col-md-12 col-lg-8">
-                                        <div class="card-body">
-                                            <h4 class="card-title"> CAT Quarter Century
-                                            </h4>
-                                            <h5 class="card-title">25 Years CAT
+                            <div class="carousel-item">
+                                <div class="card">
+                                    <div class="row g-0">
+                                        <div class="col-md-12 col-lg-4">
+                                            <img src="./imgs/event1.png" class="img-fluid rounded" alt="event1">
+                                        </div>
+                                        <div class="col-md-12 col-lg-8">
+                                            <div class="card-body">
+                                                <h4 class="card-title"> CAT Quarter Century
+                                                </h4>
+                                                <h5 class="card-title">25 Years CAT
 
 
-                                            </h5>
-                                            <ul class="row list-unstyled detail">
-                                                <li class=" col-5 col-sm-5 col-md-6 col-lg-4 col-xl-3"> <i class="fas fa-calendar-alt"></i> 21 - 28 April</li>
-                                                <li class="col-7 col-sm-7 col-md-6 col-lg-6"> <i class="fas fa-map-marker-alt"></i> ITI - Mansoura University</li>
+                                                </h5>
+                                                <ul class="row list-unstyled detail">
+                                                    <li class=" col-5 col-sm-5 col-md-6 col-lg-4 col-xl-3"> <i class="fas fa-calendar-alt"></i> 21 - 28 April</li>
+                                                    <li class="col-7 col-sm-7 col-md-6 col-lg-6"> <i class="fas fa-map-marker-alt"></i> ITI - Mansoura University</li>
 
-                                            </ul>
-                                            <p class="card-text lead">Lorem Ipsum is simply dummy dolor unknown printer text of the printing and typesetting dolor industry. Lorem Ipsum has been the industry's standard dummy when an unknown printer. dolo Contrary to popular belief,
-                                                Lorem
+                                                </ul>
+                                                <p class="card-text lead">Lorem Ipsum is simply dummy dolor unknown printer text of the printing and typesetting dolor industry. Lorem Ipsum has been the industry's standard dummy when an unknown printer. dolo Contrary to popular
+                                                    belief, Lorem
 
 
-                                            </p>
-                                            <a class="btn outline-cat-button ">
+                                                </p>
+                                                <a class="btn outline-cat-button ">
                                         Read More 
                                      </a> </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -310,48 +316,53 @@
                             <button type="button" data-bs-target="#latestProject" data-bs-slide-to="1" aria-label="Slide 2"></button>
                         </div>
                         <div class="carousel-inner">
-                            <div class="carousel-item card mb-3 active " data-bs-interval="10000">
-                                <div class="row g-0">
-                                    <div class="col-md-12 col-lg-4">
-                                        <img src="./imgs/kawen.png" class="img-fluid rounded" alt="...">
-                                    </div>
-                                    <div class="col-md-12 col-lg-8">
-                                        <div class="card-body">
-                                            <h4 class="card-title">Kawen
-                                            </h4>
-                                            <p class="card-text lead">Lorem Ipsum is simply dummy dolor unknown printer text of the printing and typesetting dolor industry. Lorem Ipsum has been the industry's standard dummy when an unknown printer. dolo Contrary to popular belief,
-                                                Lorem
+                            <div class="carousel-item active " data-bs-interval="10000">
+                                <div class="card">
 
-                                            </p>
-                                            <a class="btn outline-cat-button ">
+                                    <div class="row g-0">
+                                        <div class="col-md-12 col-lg-4">
+                                            <img src="./imgs/kawen.png" class="img-fluid rounded" alt="...">
+                                        </div>
+                                        <div class="col-md-12 col-lg-8">
+                                            <div class="card-body">
+                                                <h4 class="card-title">Kawen
+                                                </h4>
+                                                <p class="card-text lead">Lorem Ipsum is simply dummy dolor unknown printer text of the printing and typesetting dolor industry. Lorem Ipsum has been the industry's standard dummy when an unknown printer. dolo Contrary to popular
+                                                    belief, Lorem
+
+                                                </p>
+                                                <a class="btn outline-cat-button ">
                                     Read More..
                                  </a>
-                                            <a class="btn outline-cat-button active">
+                                                <a class="btn outline-cat-button active">
                                    Visit Website
                                  </a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="carousel-item card mb-3 " data-bs-interval="2000">
-                                <div class="row g-0">
-                                    <div class="col-md-12 col-lg-4">
-                                        <img src="./imgs/kawen.png" class="img-fluid rounded" alt="event1">
-                                    </div>
-                                    <div class="col-md-12 col-lg-8">
-                                        <div class="card-body">
-                                            <h4 class="card-title">Kawen
-                                            </h4>
-                                            <p class="card-text lead">Lorem Ipsum is simply dummy dolor unknown printer text of the printing and typesetting dolor industry. Lorem Ipsum has been the industry's standard dummy when an unknown printer. dolo Contrary to popular belief,
-                                                Lorem
-                                            </p>
-                                            <a class="btn outline-cat-button ">
+                            <div class="carousel-item " data-bs-interval="2000">
+                                <div class="card">
+                                    <div class="row g-0">
+                                        <div class="col-md-12 col-lg-4">
+                                            <img src="./imgs/kawen.png" class="img-fluid rounded" alt="event1">
+                                        </div>
+                                        <div class="col-md-12 col-lg-8">
+                                            <div class="card-body">
+                                                <h4 class="card-title">Kawen
+                                                </h4>
+                                                <p class="card-text lead">Lorem Ipsum is simply dummy dolor unknown printer text of the printing and typesetting dolor industry. Lorem Ipsum has been the industry's standard dummy when an unknown printer. dolo Contrary to popular
+                                                    belief, Lorem
+                                                </p>
+                                                <a class="btn outline-cat-button ">
                                     Read More.. 
                                  </a>
-                                            <a class="btn outline-cat-button active">
+                                                <a class="btn outline-cat-button active">
                                    Visit Website
                                  </a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -462,6 +473,7 @@
     <button type="button" class="btn btn-floating btn-md" id="btn-back-to-top">
   <i class="fas fa-arrow-up"></i>
 </button>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script>
@@ -550,6 +562,11 @@
             document.body.scrollTop = 0;
             document.documentElement.scrollTop = 0;
         }
+
+        $(document.ready(function() {
+            $('#carouselExampleDark, #latestProject, #Oursponsor').carousel();
+
+        }))
     </script>
 </body>
 
