--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Events</a>
+                        <a class="nav-link" href="Events.html">Events</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">CATzins</a>
@@ -51,46 +51,6 @@
                     </span>
             </div>
 
-
-            <!--Left Menu
-                <button class="navbar-toggler leftmenu" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-
-                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-                    <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasExampleLabel">Menu</h5>
-                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                    </div>
-                    <div class="offcanvas-body">
-                        <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Events</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">CATzins</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Committes</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Contactus</a>
-                            </li>
-                        </ul>
-                        <span class="navbar-text d-grid gap-2 mx-2">
-
-                        <button type="button" class="btn btn-outline-danger btn-large">newsletter</button>
-                    </span>
-
-                    </div>
-                </div>
-            -->
         </div>
     </nav>
     <!--end navbar-->
@@ -476,98 +436,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <script>
-        let nav = document.getElementById("nav");
-        let header = document.querySelector("header");
-        let logo = document.querySelector(".navbar-brand img")
-        let sticky = nav.offsetHeight;
-
-        window.onscroll = function() {
-            myFunction();
-            Counter();
-            scrollFunction();
-
-        };
-
-        function myFunction() {
-            if (window.pageYOffset >= sticky) {
-                nav.classList.add("sticky");
-                logo.setAttribute('src', './imgs/catBlack.svg');
-                nav.style.boxShadow = '-5px -2px 6px #eee';
-
-            } else {
-                nav.classList.remove("sticky");
-                logo.setAttribute('src', './imgs/navLogo.svg')
-                nav.style.boxShadow = 'none';
-
-            }
-        }
-
-        let imgSession = document.querySelector('.ourachievments li img');
-        /*
-                imgSession.onmouseover = function() {
-                    this.setAttribute('src', './imgs/seessions.svg');
-                    this.style.transition = "all .5s ease-in-out"
-                };
-                imgSession.onmouseleave = function() {
-                    this.style.transition = "all .5s ease-in-out"
-                    this.setAttribute('src', './imgs/Layer 2.svg');
-                };
-        */
-
-        const counters = document.querySelectorAll('.ourachievments li span');
-        // Declate variable
-        var timer;
-        let achievements = document.querySelector('.ourachievments');
-
-        function Counter() {
-            if (window.pageYOffset >= achievements.offsetTop + 500) {
-                achievements.style.display = "flex";
-                countUp(counters[0], 0, 15, 60);
-                countUp(counters[1], 0, 7, 70);
-                countUp(counters[2], 0, 50, 30);
-                countUp(counters[3], 0, 5, 30);
-                countUp(counters[4], 0, 50, 40);
-                countUp(counters[5], 0, 200, 10);
-            }
-        }
-
-
-        function countUp(selector, min, max, duration) {
-            var inter = setInterval(function() {
-                selector.innerHTML = ++min;
-                if (min >= max) {
-                    clearTimeout(inter);
-                }
-            }, duration);
-        }
-
-        let mybutton = document.getElementById("btn-back-to-top");
-
-
-        function scrollFunction() {
-            if (
-                document.body.scrollTop > 20 ||
-                document.documentElement.scrollTop > 20
-            ) {
-                mybutton.style.display = "block";
-            } else {
-                mybutton.style.display = "none";
-            }
-        }
-        // When the user clicks on the button, scroll to the top of the document
-        mybutton.addEventListener("click", backToTop);
-
-        function backToTop() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
-
-        $(document.ready(function() {
-            $('#carouselExampleDark, #latestProject, #Oursponsor').carousel();
-
-        }))
-    </script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
